@@ -1,3 +1,8 @@
+2005-09-23  Jonathan Pryor <jonpryor@vt.edu>
+
+	* make-map.cs: Generate NativeConvert documentation XML fragments for use in
+	  monodoc.
+
 2005-09-20  Jonathan Pryor <jonpryor@vt.edu>
 
 	* ChangeLog: Started.
